<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Office Hours</string>
    <string name="elapsed_time">00:00:00</string>
    <string name="elapsed_time_label">Elapsed time</string>
    <string name="project_label">Project</string>
    <string name="timer_button_label_off">Start</string>
    <string name="timer_button_label_on">Stop</string>
    <string name="time_booking_label">Time Bookings</string>
    <string name="time_booking_label_single">Time Booking</string>
    <string name="no_data">No time bookings have been recorded.\n\nPlease start a timer using the plus button on the top right.</string>
    <string name="project_name_label">Project name</string>
    <string name="plus_label">+</string>
    <string name="start_time_label">"Start time: "</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
</resources>