<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/elapsed_time_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/label_background"
        android:text="@string/elapsed_time_label"
        android:textColor="@color/label_font" />

    <TextView
        android:id="@+id/elapsed_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/elapsed_time"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/project_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/label_background"
        android:text="@string/project_label"
        android:textColor="@color/label_font" />

    <Spinner
        android:id="@+id/project_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/project_list" />

    <ToggleButton
        android:id="@+id/timer_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textOff="@string/timer_button_label_off"
        android:textOn="@string/timer_button_label_on"
        android:textSize="80sp" />

</LinearLayout>