<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="48sp" 
    android:background="@drawable/timebooking_list_item"
    >

    <TextView
        android:id="@+id/project_name_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:paddingTop="2dp"
        android:paddingLeft="5dp"
        android:text="@string/project_name_label"
        android:textSize="16sp"
        android:textColor="@color/label_font"
        android:layout_alignParentTop="true" 
        />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/timebox_gradient"
        android:layout_margin="10sp"
        android:layout_alignParentTop="true" 
        android:layout_alignParentRight="true" 
		>

    <TextView
        android:id="@+id/hours_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2sp"
        android:paddingLeft="5sp"
        android:paddingBottom="2sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/label_font"
        android:shadowColor="@color/shadow_color"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.02"
        />
    <TextView
        android:id="@+id/hours_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_label"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/label_font"
        android:shadowColor="@color/shadow_color"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.02"
        />
    <TextView
        android:id="@+id/minutes_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/label_font"
        android:shadowColor="@color/shadow_color"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.02"
        />
    <TextView
        android:id="@+id/minutes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5sp"
        android:text="@string/minutes_label"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/label_font"
        android:shadowColor="@color/shadow_color"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.02"
        />
    
    </LinearLayout>

    <TextView
        android:id="@+id/startdt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/start_time_label" 
        android:textSize="12sp"
        android:textColor="@color/label_font"
		android:layout_below="@id/project_name_list_item"
        />

    <TextView
        android:id="@+id/startdt_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/label_font"
        android:layout_toRightOf="@id/startdt_label"
		android:layout_below="@id/project_name_list_item"
        />
    
</RelativeLayout>