<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_header"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/time_booking_label"
            android:textColor="@color/label_font"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/orange_gradient"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />

        <AnalogClock
            android:id="@+id/active_timer_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onTimerButtonClicked"
            android:padding="3dp" />

        <TextView
            android:id="@+id/new_timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onTimerButtonClicked"
            android:text="@string/plus_label"
            android:textColor="@color/label_font"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/label_background"
        android:text="@string/no_data"
        android:textColor="@color/label_font"
        android:textSize="20sp"
        android:gravity="center"
         />

</LinearLayout>